--- a/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
+++ b/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
@@ -37,7 +37,7 @@
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item nz-row>
-                            <nz-form-label nz-col [nzSm]="4" nzFor="employeeName">所属烟技员</nz-form-label>
+                            <nz-form-label nz-col [nzSm]="4" nzFor="employeeName">所属烟技员:</nz-form-label>
                             <nz-form-control [nzSm]="16" nzHasFeedback>
                                 <input nz-input readonly="readonly" placeholder="请选择烟技员" formControlName="employeeName"
                                     id="employeeName" [(ngModel)]="grower.employeeName">
