--- a/ng-admin/src/account/login/login.component.html
+++ b/ng-admin/src/account/login/login.component.html
@@ -30,7 +30,7 @@
         </nz-form-item>
 
         <!-- 登陆按钮 -->
-        <button nz-button nzType="primary" type="submit" class="ant-btn__block" [disabled]="!validateForm.valid">登陆</button>
+        <button nz-button nzType="primary" type="submit" class="ant-btn__block" [disabled]="!validateForm.valid">登录</button>
 
         <!-- 注册 -->
         <!-- <nz-form-item>
