--- a/ng-admin/src/app/users/create-user/create-user.component.html
+++ b/ng-admin/src/app/users/create-user/create-user.component.html
@@ -12,7 +12,7 @@
                 <!-- 用户账号 -->
                 <nz-form-item>
                     <nz-form-control nzHasFeedback>
-                        <input nz-input formControlName="userName" [placeholder]="l('UserName')">
+                        <input nz-input formControlName="userName" [placeholder]="'登录账号'">
                         <nz-form-explain *ngIf="validateForm.get('userName').dirty&&validateForm.get('userName').errors">
                             <ng-container *ngIf="validateForm.get('userName').hasError('required')">{{l('CanNotNull')}}</ng-container>
                         </nz-form-explain>
@@ -23,7 +23,8 @@
                 <nz-form-item>
                     <nz-form-control nzHasFeedback>
                         <nz-input-group nzSearch [nzSuffix]="suffixIconButton">
-                            <input readonly="readonly" [(ngModel)]="user.name" nz-input formControlName="name" id="name" placeholder="请选择员工">
+                            <input readonly="readonly" [(ngModel)]="user.name" nz-input formControlName="name" id="name"
+                                placeholder="请选择员工">
                             <ng-template #suffixIconButton>
                                 <button nz-button type="button" nzType="primary" (click)="showModal()" nzSearch>选择员工</button>
                             </ng-template>
@@ -62,7 +63,8 @@
                 <!-- 密码 -->
                 <nz-form-item>
                     <nz-form-control nzHasFeedback>
-                        <input nz-input formControlName="password" [placeholder]="l('Password')" type="password" autocomplete="current-password" (ngModelChange)="updateConfirmValidator()">
+                        <input nz-input formControlName="password" [placeholder]="l('Password')" type="password"
+                            autocomplete="current-password" (ngModelChange)="updateConfirmValidator()">
                         <nz-form-explain *ngIf="validateForm.get('password').dirty&&validateForm.get('password').errors">
                             <ng-container *ngIf="validateForm.get('password').hasError('required')">{{l('CanNotNull')}}</ng-container>
                         </nz-form-explain>
@@ -72,7 +74,8 @@
                 <!-- 确认密码 -->
                 <nz-form-item>
                     <nz-form-control nzHasFeedback>
-                        <input nz-input formControlName="confirmPassword" [placeholder]="l('ConfirmPassword')" type="password" autocomplete="new-password">
+                        <input nz-input formControlName="confirmPassword" [placeholder]="l('ConfirmPassword')" type="password"
+                            autocomplete="new-password">
                         <nz-form-explain *ngIf="validateForm.get('confirmPassword').dirty&&validateForm.get('confirmPassword').errors">
                             <ng-container *ngIf="validateForm.get('confirmPassword').hasError('required')">{{l('CanNotNull')}}</ng-container>
                             <ng-container *ngIf="validateForm.get('confirmPassword').hasError('confirm')">{{l('PasswordInconsistent')}}</ng-container>
@@ -98,11 +101,11 @@
         <div class="custom-modal-footer">
             <div class="custom-modal-footter-group">
                 <button nz-button type="button" [disabled]="saving" (click)="close()">
-          {{l("Cancel")}}
-        </button>
+                    {{l("Cancel")}}
+                </button>
                 <button nz-button [nzType]="'primary'" type="button" (click)="submit()" [disabled]="!validateForm.valid">
-          {{l("Save")}}
-        </button>
+                    {{l("Save")}}
+                </button>
             </div>
         </div>
 
