--- a/ng-admin/src/documents/document/category/create-category/create-category.component.html
+++ b/ng-admin/src/documents/document/category/create-category/create-category.component.html
@@ -4,7 +4,8 @@
     </h3>
     <form nz-form [formGroup]="validateForm" (ngSubmit)="submit()" *ngIf="category">
         <nz-form-item>
-            <label>{{pname? '上级分类：' + pname : '一级分类'}}</label>
+            <label *ngIf="pname">{{'上级分类：' + pname}}</label>
+            <nz-alert *ngIf="!pname" nzType="info" nzMessage="一级分类" nzShowIcon></nz-alert>
         </nz-form-item>
         <!-- 分类名称 -->
         <nz-form-item>
