--- a/ng-admin/src/documents/document/list/list.component.html
+++ b/ng-admin/src/documents/document/list/list.component.html
@@ -1,17 +1,14 @@
 <div nz-row>
     <div nz-col nzSpan="18" style="padding-right:10px;">
         <nz-input-group nzSearch [nzSuffix]="suffixButton">
-            <input type="text" [(ngModel)]="name" nz-input placeholder="资料名称、摘要">
+            <input type="text" [(ngModel)]="keyWord" nz-input placeholder="资料名称、摘要">
         </nz-input-group>
         <ng-template #suffixButton>
-            <button nz-button nzType="default" nzSearch>搜索</button>
+            <button nz-button nzType="default" [nzLoading]="loading" (click)="refreshData(true)" nzSearch>搜索</button>
         </ng-template>
     </div>
     <div nz-col nzSpan="6" style="text-align:center;">
         <button nz-button nzType="default"><i class="anticon anticon-download"></i>下载二维码</button>
-        <button nz-button (click)="refresh()" nzShape="circle">
-            <i class="anticon anticon-reload"></i>
-        </button>
         <button nz-button (click)="create()" nzShape="circle" nzType="primary">
             <i class="anticon anticon-plus"></i>
         </button>
@@ -22,7 +19,7 @@
         <ng-template #totalTemplate let-total>共 {{query.total}} 条</ng-template>
         <nz-table #nzTable [nzFrontPagination]="false" [nzShowTotal]="totalTemplate" [nzTotal]="query.total" [nzData]="docs"
             [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
-            (nzPageIndexChange)="refreshData(tempNode)" (nzPageSizeChange)="refreshData(tempNode)">
+            (nzPageIndexChange)="refreshData(false)" (nzPageSizeChange)="refreshData(false)">
             <thead>
                 <tr>
                     <th>资料名称</th>
@@ -31,16 +28,18 @@
                     <th>授权部门</th>
                     <th>授权用户</th>
                     <th>发布时间</th>
+                    <th>操作</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let item of nzTable.data">
                     <td>{{item.name}}</td>
                     <td>{{item.categoryDesc}}</td>
-                    <td>{{item.summary}}</td>
-                    <td>{{item.deptDesc}}</td>
-                    <td>{{item.employeeDes}}</td>
-                    <td>{{item.releaseDate}}</td>
+                    <td>{{item.summary | lengthLimit:20}}</td>
+                    <td>{{item.isAllUser? '全部' : item.deptDesc}}</td>
+                    <td>{{item.isAllUser? '全部' : item.employeeDes}}</td>
+                    <td>{{item.releaseDate | date: "yyyy-MM-dd"}}</td>
+                    <td><a (click)="edit(item)">详情</a></td>
                 </tr>
             </tbody>
         </nz-table>
