--- a/ng-admin/src/documents/document/detail/document-detail.component.html
+++ b/ng-admin/src/documents/document/detail/document-detail.component.html
@@ -30,9 +30,25 @@
                     </nz-form-control>
                 </nz-form-item>
                 <nz-form-item nz-row>
-                    <nz-form-label nz-col [nzSm]="4" nzRequired>用户授权</nz-form-label>
+                    <nz-form-label nz-col [nzSm]="4" nzRequired>可查看用户</nz-form-label>
                     <nz-form-control [nzSm]="20" nzHasFeedback>
-                        <label>所有用户</label>
+                        <nz-radio-group formControlName="isAllUser" (ngModelChange)="allUserRadioChange($event)">
+                            <label nz-radio nzValue="1">所有用户</label>
+                            <label nz-radio nzValue="0">部分用户</label>
+                        </nz-radio-group>
+                        <!-- <input nz-input *ngIf="isAllUser == '0'" readonly="readonly" style="color:#1890ff;" value="{{userDesc? userDesc : '部门，人'}}">-->
+                        <div *ngIf="isAllUser == '0'">
+                            <nz-tag *ngFor="let dept of deptTags; let i = index;" [nzColor]="'blue'" [nzMode]="'closeable'"
+                                (nzAfterClose)="handleDeptClose(dept)">
+                                {{ dept }}
+                            </nz-tag>
+                            <nz-tag *ngFor="let user of userTags; let i = index;" [nzMode]="'closeable'" (nzAfterClose)="handleUserClose(user)">
+                                {{ user }}
+                            </nz-tag>
+                            <nz-tag class="editable-tag" [nzColor]="'#108ee9'" (click)="showDeptUserModel()">
+                                <i class="anticon anticon-plus"></i> 选择部门和人
+                            </nz-tag>
+                        </div>
                     </nz-form-control>
                 </nz-form-item>
                 <nz-form-item nz-row>
