--- a/ng-admin/src/documents/document/dept-user/dept-user.component.html
+++ b/ng-admin/src/documents/document/dept-user/dept-user.component.html
@@ -19,23 +19,9 @@
     <div nz-row>
         <div nz-col nzSpan="12">
             <div>
-                <nz-tree [nzCheckable]="true" [(ngModel)]="nodes" [nzShowExpand]="true" (nzClick)="activeNode($event)"
-                    [nzDefaultCheckedKeys]="checkedDeptKeys" (nzDblClick)="openFolder($event)">
-                    <ng-template style="margin:0px;" #nzTreeTemplate let-node>
-                        <span class="custom-node" aria-grabbed="true" [class.active]="activedNode?.key===node.key">
-                            <span *ngIf="!node.isLeaf" [class.shine-animate]="node.origin.isLoading">
-                                <i class="anticon anticon-folder" *ngIf="!node.isExpanded" (click)="openFolder(node)"></i>
-                                <i class="anticon anticon-folder-open" *ngIf="node.isExpanded" (click)="openFolder(node)"></i>
-                                <span class="folder-name">{{node.title}}</span>
-                                <!-- <span class="folder-desc">{{node?.origin?.author | lowercase}}</span> -->
-                            </span>
-                            <span *ngIf="node.isLeaf">
-                                <i class="anticon anticon-folder"></i>
-                                <span class="file-name">{{node.title}}</span>
-                                <!-- <span class="file-desc">{{node?.origin?.author | lowercase}}</span> -->
-                            </span>
-                        </span>
-                    </ng-template>
+                <nz-tree #treeCom [nzCheckable]="true" [nzData]="nodes" [nzShowExpand]="true" (nzClick)="activeNode($event)"
+                    [nzCheckedKeys]="checkedDeptKeys" [nzCheckStrictly]="true" (nzDblClick)="openFolder($event)"
+                    (nzCheckBoxChange)="checkBoxChange($event)">
                 </nz-tree>
             </div>
         </div>
@@ -70,7 +56,7 @@
     </div>
     <div class="custom-modal-footer">
         <div class="custom-modal-footter-group">
-            <button nz-button type="button" [disabled]="saving" (click)="close()">
+            <button nz-button type="button" [disabled]="saving" (click)="cancel()">
                 取消
             </button>
             <button nz-button [nzType]="'primary'" type="button" (click)="ok()">
