二维码下载

--- a/ng-admin/src/documents/document/list/list.component.html
+++ b/ng-admin/src/documents/document/list/list.component.html
@@ -8,10 +8,13 @@
         </ng-template>
     </div>
     <div nz-col nzSpan="6" style="text-align:center;">
-        <button nz-button nzType="default"><i class="anticon anticon-download"></i>下载二维码</button>
+        <button nz-button nzType="default" (click)="download()" [nzLoading]="downloading"><i class="anticon anticon-download"></i>下载二维码</button>
         <button nz-button (click)="create()" nzShape="circle" nzType="primary">
             <i class="anticon anticon-plus"></i>
         </button>
+        <a style="display: none;" id="aDocZipUrl" href="#">
+            <button type="button" id="btnDocZipHref">隐藏下载</button>
+        </a>
     </div>
 </div>
 <div nz-row>
