--- a/ng-admin/src/documents/document/dept-user/dept-user.component.html
+++ b/ng-admin/src/documents/document/dept-user/dept-user.component.html
@@ -56,7 +56,7 @@
     </div>
     <div class="custom-modal-footer">
         <div class="custom-modal-footter-group">
-            <button nz-button type="button" [disabled]="saving" (click)="cancel()">
+            <button nz-button type="button" (click)="cancel()">
                 取消
             </button>
             <button nz-button [nzType]="'primary'" type="button" (click)="ok()">
