走访计划增加自定义时间

--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
@@ -86,6 +86,12 @@
                         </nz-form-item> -->
 
                         </nz-form-item>
+                        <nz-form-item z-row *ngIf="schedule.type == 4">
+                            <nz-form-label nz-col [nzSm]="4" nzFor="dateRange">时间范围</nz-form-label>
+                            <nz-form-control [nzSm]="20">
+                                <nz-range-picker formControlName="beginTime" name="dateRange" [(ngModel)]="dateRange" [nzFormat]="shedateFormat" (ngModelChange)="changeTime($event)"></nz-range-picker>
+                            </nz-form-control>
+                        </nz-form-item>
 
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="desc">计划说明</nz-form-label>
@@ -145,10 +151,12 @@
                 <button nz-button *ngIf="isDelete && isPush" [nzType]="'danger'" (click)="delete()" [nzLoading]="isConfirmLoading">
                     {{l("删除")}}
                 </button>
-                <button nz-button *ngIf="isPush == true&&!isNewInfo" [nzType]="'primary'" type="button" (click)="push()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid">
+                <button nz-button *ngIf="isPush == true&&!isNewInfo" [nzType]="'primary'" type="button" (click)="push()" [nzLoading]="isConfirmLoading"
+                    [disabled]="!validateForm.valid">
                     {{l("发布")}}
                 </button>
-                <button nz-button *ngIf="isPush" [nzType]=" 'primary' " type="button " (click)="save() " [nzLoading]="isConfirmLoading " [disabled]="!validateForm.valid ">
+                <button nz-button *ngIf="isPush" [nzType]=" 'primary' " type="button " (click)="save() " [nzLoading]="isConfirmLoading "
+                    [disabled]="!validateForm.valid ">
                     {{l("保存 ")}}
                 </button>
             </footer-toolbar>
@@ -158,7 +166,8 @@
     <nz-tab nzTitle="任务指派完成明细">
         <nz-card [nzBordered]="false" nzTitle={{recordTitle}}>
             <ng-template #totalTemplate let-total>共 {{queryRecord.total}} 条</ng-template>
-            <nz-table #nzTableRecord [nzData]="recordList" [nzFrontPagination]="false" [nzTotal]="queryRecord.total" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="queryRecord.pageIndex" [(nzPageSize)]="queryRecord.pageSize" [nzLoading]="loadingRecord" [nzShowSizeChanger]="true"
+            <nz-table #nzTableRecord [nzData]="recordList" [nzFrontPagination]="false" [nzTotal]="queryRecord.total" [nzShowTotal]="totalTemplate"
+                [(nzPageIndex)]="queryRecord.pageIndex" [(nzPageSize)]="queryRecord.pageSize" [nzLoading]="loadingRecord" [nzShowSizeChanger]="true"
                 (nzPageIndexChange)="getScheduleRecordDetail()" (nzPageSizeChange)="getScheduleRecordDetail()">
                 <thead>
                     <tr>
