--- a/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
+++ b/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
@@ -7,8 +7,7 @@
                         <nz-form-item nz-row style="margin-bottom: 0px;">
                             <nz-form-label nz-col [nzSm]="4" nzFor="areaCode">所属区县</nz-form-label>
                             <nz-form-control nz-col [nzSm]="20">
-                                <nz-radio-group formControlName="areaCode" [(ngModel)]="grower.areaCode"
-                                    (ngModelChange)="areaCodeChange()" class="mb-md">
+                                <nz-radio-group formControlName="areaCode" [(ngModel)]="grower.areaCode" (ngModelChange)="areaCodeChange()" class="mb-md">
                                     <label nz-radio [nzValue]="o.value" *ngFor="let o of countyCodes">
                                         <span>{{o.text}}</span>
                                     </label>
@@ -27,8 +26,8 @@
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="unitCode">单位名称</nz-form-label>
                             <nz-form-control [nzSm]="20" nzHasFeedback>
-                                <nz-select formControlName="unitCode" [nzPlaceHolder]="'请选择单位名称'" name="unitCode"
-                                    [(ngModel)]="grower.unitCode" (ngModelChange)="getText($event)" [nzShowSearch]="true">
+                                <nz-select formControlName="unitCode" [nzPlaceHolder]="'请选择单位名称'" name="unitCode" [(ngModel)]="grower.unitCode" (ngModelChange)="getText($event)"
+                                    [nzShowSearch]="true">
                                     <nz-option *ngFor="let i of unitTypes" [nzLabel]="i.text" [nzValue]="i.value">
                                     </nz-option>
                                 </nz-select>
@@ -39,13 +38,11 @@
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="employeeName">所属烟技员</nz-form-label>
                             <nz-form-control [nzSm]="16" nzHasFeedback>
-                                <input nz-input readonly="readonly" placeholder="请选择烟技员" formControlName="employeeName"
-                                    id="employeeName" [(ngModel)]="grower.employeeName">
+                                <input nz-input readonly="readonly" placeholder="请选择烟技员" formControlName="employeeName" id="employeeName" [(ngModel)]="grower.employeeName">
                                 <nz-form-explain *ngIf="validateForm.get('employeeName').dirty&&validateForm.get('employeeName').hasError('maxlength')">字符长度小于等于200</nz-form-explain>
                             </nz-form-control>
                             <nz-form-control [nzSm]="4" style="float: right;">
-                                <button nz-button type="button" nzType="primary" (click)="showModal()" [acl]="'CityAdmin'"
-                                    style="margin-left: 20px">选择烟技员</button>
+                                <button nz-button type="button" nzType="primary" (click)="showModal()" [acl]="'CityAdmin'" style="margin-left: 20px">选择烟技员</button>
                             </nz-form-control>
                         </nz-form-item>
 
@@ -111,8 +108,7 @@
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="contractTime">合同签订时间</nz-form-label>
                             <nz-form-control [nzSm]="20">
-                                <nz-date-picker formControlName="contractTime" [nzFormat]="yyyy/MM/dd" [(ngModel)]="grower.contractTime"
-                                    [nzPlaceHolder]="'请选择日期'"></nz-date-picker>
+                                <nz-date-picker formControlName="contractTime" [nzFormat]="yyyy/MM/dd" [(ngModel)]="grower.contractTime" [nzPlaceHolder]="'请选择日期'"></nz-date-picker>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item nz-row>
@@ -129,6 +125,16 @@
                                 <nz-form-explain *ngIf="validateForm.get('latitude').dirty&&validateForm.get('latitude').hasError('plantingArea')">字符长度小于等于500</nz-form-explain>
                             </nz-form-control>
                         </nz-form-item>
+                        <nz-form-item nz-row>
+                            <nz-form-label nz-col [nzSm]="4" nzFor="isEnable">启用状态</nz-form-label>
+                            <nz-form-control [nzSm]="20">
+                                <nz-radio-group formControlName="isEnable" [(ngModel)]="grower.isEnable" class="mb-md">
+                                    <label nz-radio [nzValue]="o.value" *ngFor="let o of enableTypes">
+                                        <span>{{o.text}}</span>
+                                    </label>
+                                </nz-radio-group>
+                            </nz-form-control>
+                        </nz-form-item>
                     </div>
                 </div>
             </form>
@@ -136,12 +142,11 @@
                 <button nz-button [nzType]="'default'" (click)="return()">
                     {{l("返回")}}
                 </button>
-                <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading"
-                    [acl]="'CityAdmin'">
+                <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading" [acl]="'CityAdmin'">
                     {{l("删除")}}
                 </button>
-                <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading"
-                    [disabled]="!validateForm.valid" [acl]="'CityAdmin'">
+                <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid"
+                    [acl]="'CityAdmin'">
                     {{l("保存")}}
                 </button>
             </footer-toolbar>
@@ -162,10 +167,9 @@
             </div>
 
             <ng-template #totalTemplate let-total>共 {{query.total}} 条</ng-template>
-            <nz-table #nzTable [nzData]="visitRecordList" [nzFrontPagination]="false" [nzTotal]="query.total"
-                [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize"
-                [nzLoading]="loading" [nzShowSizeChanger]="true" (nzPageIndexChange)="getVisitRecord()"
-                (nzPageSizeChange)="getVisitRecord()">
+            <nz-table #nzTable [nzData]="visitRecordList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate"
+                [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
+                (nzPageIndexChange)="getVisitRecord()" (nzPageSizeChange)="getVisitRecord()">
                 <thead>
                     <tr>
                         <th>签到图片</th>
@@ -180,8 +184,8 @@
                 <tbody>
                     <tr *ngFor="let data of nzTable.data">
                         <td>
-                            <nz-avatar [nzSrc]="(data.imgPath | hostUrl)" style="width:80px;height: 80px;" (click)="handlePreview(data.imgPath)"
-                                [nzSize]="'large'" [nzShape]="'square'"></nz-avatar>
+                            <nz-avatar [nzSrc]="(data.imgPath | hostUrl)" style="width:80px;height: 80px;" (click)="handlePreview(data.imgPath)" [nzSize]="'large'"
+                                [nzShape]="'square'"></nz-avatar>
                         </td>
                         <td>{{data.employeeName}}</td>
                         <td>{{data.taskName}}</td>
