--- a/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
+++ b/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
@@ -147,6 +147,7 @@
                 </button>
                 <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid"
                     [acl]="'CityAdmin'">
+                    <!-- CityAdmin权限 -->
                     {{l("保存")}}
                 </button>
             </footer-toolbar>
