--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
@@ -52,13 +52,13 @@
                             <nz-form-explain *ngIf="validateForm.get('visitNum').dirty&&validateForm.get('visitNum').hasError('pattern')">请输入整数</nz-form-explain>
                         </nz-form-control>
                     </nz-form-item> -->
-                        <nz-form-item nz-row *ngIf="schedule.type == 3">
+                        <nz-form-item *ngIf="schedule.type == 3" nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="beginTime">计划执行时间</nz-form-label>
                             <nz-form-control [nzSm]="20">
                                 <nz-date-picker formControlName="beginTime" [nzFormat]="yyyy/MM/dd" [(ngModel)]="schedule.beginTime" nzPlaceHolder="请选择日期"></nz-date-picker>
                             </nz-form-control>
                         </nz-form-item>
-                        <nz-form-item nz-row *ngIf="schedule.type == 2">
+                        <nz-form-item *ngIf="schedule.type == 2" nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="beginTime">周计划周期</nz-form-label>
                             <nz-form-control nz-col [nzSm]="20">
                                 <nz-select formControlName="weekTempTime" [(ngModel)]="weekTempTime" class="mb-md">
@@ -70,7 +70,7 @@
                         </nz-form-control> -->
                             </nz-form-control>
                         </nz-form-item>
-                        <nz-form-item nz-row *ngIf="schedule.type == 1">
+                        <nz-form-item *ngIf="schedule.type == 1" nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="beginTime">计划时间</nz-form-label>
                             <nz-form-control [nzSm]="20">
                                 <nz-month-picker formControlName="beginTime" (ngModelChange)="onChange($event)" [(ngModel)]="showTime" nzPlaceHolder="请选择日期"></nz-month-picker>
@@ -84,14 +84,15 @@
                                 <nz-month-picker formControlName="endTime" [nzFormat]="monthFormat" [(ngModel)]="schedule.endTime" nzPlaceHolder="请选择日期"></nz-month-picker>
                             </nz-form-control>
                         </nz-form-item> -->
-
                         </nz-form-item>
-                        <nz-form-item z-row *ngIf="schedule.type == 4">
+
+                        <nz-form-item *ngIf="schedule.type == 4" nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="dateRange">时间范围</nz-form-label>
                             <nz-form-control [nzSm]="20">
-                                <nz-range-picker formControlName="beginTime" name="dateRange" [(ngModel)]="dateRange" [nzFormat]="shedateFormat" (ngModelChange)="changeTime($event)"></nz-range-picker>
+                                <nz-range-picker formControlName="dateRange" name="dateRange" [(ngModel)]="dateRange" [nzFormat]="shedateFormat" (ngModelChange)="changeTime($event)"></nz-range-picker>
                             </nz-form-control>
                         </nz-form-item>
+
 
                         <nz-form-item nz-row>
                             <nz-form-label nz-col [nzSm]="4" nzFor="desc">计划说明</nz-form-label>
