--- a/ng-admin/src/configs/data-config/data-config.component.html
+++ b/ng-admin/src/configs/data-config/data-config.component.html
@@ -25,7 +25,7 @@
                                 <i class="anticon anticon-reload"></i>
                             </button>
                             <!-- <button nz-button type="reset" (click)="refreshData()" [nzSize]="'large'" class="mx-sm">重置</button> -->
-                            <button nz-button type="button" (click)="addLeaf()" nzShape="circle" [nzType]="'primary'" [nzSize]="'large'">
+                            <button nz-button type="button" (click)="addLeaf()" nzShape="circle" [nzType]="'primary'">
                                 <i class="anticon anticon-plus"></i>
                                 <!-- <span>新建</span> -->
                             </button>
@@ -33,9 +33,9 @@
                     </div>
                 </form>
                 <ng-template #totalContentLe>共{{query.total}}条</ng-template>
-                <nz-table #nzTable [nzData]="systemDataLeafs" [nzFrontPagination]="false" [nzTotal]="query.total" [(nzPageIndex)]="query.pageIndex"
-                    [(nzPageSize)]="query.pageSize" [nzShowTotal]="totalContentLe" [nzLoading]="loading" nzShowSizeChanger (nzPageIndexChange)="getAllLeafs()"
-                    (nzPageSizeChange)="getAllLeafs()">
+                <nz-table #nzTable [nzData]="systemDataLeafs" [nzFrontPagination]="false" [nzTotal]="query.total"
+                    [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzShowTotal]="totalContentLe"
+                    [nzLoading]="loading" nzShowSizeChanger (nzPageIndexChange)="getAllLeafs()" (nzPageSizeChange)="getAllLeafs()">
                     <thead>
                         <tr>
                             <th>
@@ -46,6 +46,9 @@
                             </th>
                             <th>
                                 <span>配置项</span>
+                            </th>
+                            <th>
+                                <span>备注</span>
                             </th>
                             <th>
                                 <span>序号</span>
@@ -60,6 +63,7 @@
                             <td>{{leaf.typeName}}</td>
                             <td>{{leaf.code}}</td>
                             <td>{{leaf.desc}}</td>
+                            <td>{{leaf.remark}}</td>
                             <td>{{leaf.seq}}</td>
                             <td>
                                 <a (click)="editLeaf(leaf)">编辑</a>
@@ -96,7 +100,8 @@
                             <button nz-button (click)="getAllMetting()" nzShape="circle">
                                 <i class="anticon anticon-reload"></i>
                             </button>
-                            <button nz-button (click)="addConfigMetting()" nzShape="circle" [nzType]="'primary'" [nzSize]="'large'">
+                            <button nz-button (click)="addConfigMetting()" nzShape="circle" [nzType]="'primary'"
+                                [nzSize]="'large'">
                                 <i class="anticon anticon-plus"></i>
                                 <!-- <span>新建</span> -->
                             </button>
@@ -104,9 +109,10 @@
                     </div>
                 </form>
                 <ng-template #totalContentMe>共{{queryMe.total}}条</ng-template>
-                <nz-table #nzTableMe [nzData]="systemDataMettings" [nzFrontPagination]="false" [nzTotal]="queryMe.total" [(nzPageIndex)]="queryMe.pageIndex"
-                    [(nzPageSize)]="queryMe.pageSize" [nzShowTotal]="totalContentMe" [nzLoading]="loadingMe" [nzShowTotal]="'true'"
-                    [nzShowSizeChanger]="true" (nzPageIndexChange)="getAllMetting()" (nzPageSizeChange)="getAllMetting()">
+                <nz-table #nzTableMe [nzData]="systemDataMettings" [nzFrontPagination]="false" [nzTotal]="queryMe.total"
+                    [(nzPageIndex)]="queryMe.pageIndex" [(nzPageSize)]="queryMe.pageSize" [nzShowTotal]="totalContentMe"
+                    [nzLoading]="loadingMe" [nzShowTotal]="'true'" [nzShowSizeChanger]="true" (nzPageIndexChange)="getAllMetting()"
+                    (nzPageSizeChange)="getAllMetting()">
                     <thead nz-thead>
                         <tr>
                             <th nz-th>
@@ -170,9 +176,10 @@
                     </div>
                 </form>
                 <ng-template #totalContentMe>共{{queryDi.total}}条</ng-template>
-                <nz-table #nzTableDi [nzData]="systemDataDings" [nzFrontPagination]="false" [nzTotal]="queryDi.total" [(nzPageIndex)]="queryDi.pageIndex"
-                    [(nzPageSize)]="queryDi.pageSize" [nzShowTotal]="totalContentMe" [nzLoading]="loadingDi" [nzShowTotal]="'true'"
-                    [nzShowSizeChanger]="true" (nzPageIndexChange)="getAllDing()" (nzPageSizeChange)="getAllDing()">
+                <nz-table #nzTableDi [nzData]="systemDataDings" [nzFrontPagination]="false" [nzTotal]="queryDi.total"
+                    [(nzPageIndex)]="queryDi.pageIndex" [(nzPageSize)]="queryDi.pageSize" [nzShowTotal]="totalContentMe"
+                    [nzLoading]="loadingDi" [nzShowTotal]="'true'" [nzShowSizeChanger]="true" (nzPageIndexChange)="getAllDing()"
+                    (nzPageSizeChange)="getAllDing()">
                     <thead nz-thead>
                         <tr>
                             <th nz-th>
