--- a/ng-admin/src/configs/data-config/data-config-create/data-config-create.component.html
+++ b/ng-admin/src/configs/data-config/data-config-create/data-config-create.component.html
@@ -36,7 +36,13 @@
                         <nz-form-explain *ngIf="form.get('desc').dirty&&form.get('desc').hasError('required')">请输入描述</nz-form-explain>
                     </nz-form-control>
                 </nz-form-item>
-
+                <nz-form-item nz-row>
+                    <nz-form-label [nzSm]="5" [nzXs]="24" nzRequired nzFor="remark">备注</nz-form-label>
+                    <nz-form-control [nzSm]="19" nzHasFeedback>
+                        <input nz-input formControlName="remark" [(ngModel)]="dataconfig.remark" id="remark">
+                        <nz-form-explain *ngIf="form.get('remark').dirty&&form.get('remark').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
                 <nz-form-item nz-row>
                     <nz-form-label nz-col [nzSm]="5" [nzXs]="24" nzRequired nzFor="seq">序号</nz-form-label>
                     <nz-form-control [nzSm]="19" nzHasFeedback>
