--- a/ng-admin/src/basic-data/organization/area-detail-modal/area-detail-modal.component.html
+++ b/ng-admin/src/basic-data/organization/area-detail-modal/area-detail-modal.component.html
@@ -1,4 +1,5 @@
-<nz-modal [(nzVisible)]="isVisible" nzMaskClosable="false" nzTitle="区县维护" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzMaskClosable="false" nzTitle="区县维护" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)"
+    style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <form nz-form [formGroup]="validateForm" *ngIf="employee">
             <div nz-row nzGutter="16">
@@ -10,31 +11,15 @@
                     </desc-list>
                 </div>
             </div>
-            <!-- <nz-form-item nz-row>
-                    <nz-form-label nz-col [nzSm]="4" nzFor="name" nzRequired>姓名</nz-form-label>
-                    <nz-form-control [nzSm]="20" nzHasFeedback>
-                        <input formControlName="name" nz-input id="name" [(ngModel)]="employee.name">
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item nz-row>
-                    <nz-form-label nz-col [nzSm]="4" nzFor="mobile">电话号码</nz-form-label>
-                    <nz-form-control [nzSm]="20" nzHasFeedback>
-                        <input nz-input formControlName="mobile" id="mobile" [(ngModel)]="employee.mobile">
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item nz-row>
-                    <nz-form-label nz-col [nzSm]="4" nzFor="position">职位</nz-form-label>
-                    <nz-form-control [nzSm]="20" nzHasFeedback>
-                        <input formControlName="position" nz-input id="position" [(ngModel)]="employee.position">
-                    </nz-form-control>
-                </nz-form-item> -->
             <nz-form-item nz-row>
-                <nz-form-label style="text-align:left;" nz-col [nzSm]="4" nzFor="unitCode">所属区县</nz-form-label>
+                <nz-form-label style="text-align:left;" nz-col [nzSm]="4" nzFor="unitCode">区县设置</nz-form-label>
                 <nz-form-control [nzSm]="20">
-                    <nz-select formControlName="unitCode" [nzPlaceHolder]="'请选择区县名称'" name="countyCode" [(ngModel)]="employee.areaCode" (ngModelChange)="getText($event)" [nzShowSearch]="true">
+                    <nz-select formControlName="unitCode" [nzPlaceHolder]="'选择区县'" name="countyCode" [(ngModel)]="employee.areaCode"
+                        (ngModelChange)="getText($event)" [nzShowSearch]="true">
                         <nz-option *ngFor="let i of countyCodes" [nzLabel]="i.text" [nzValue]="i.value">
                         </nz-option>
                     </nz-select>
+                    <nz-alert nzType="info" nzMessage="这里区县设置是特别设置单个任何用户，区县部门对应设置请在配置管理进行配置" nzShowIcon></nz-alert>
                 </nz-form-control>
             </nz-form-item>
         </form>
