--- a/ng-admin/src/app/roles/edit-role/edit-role.component.html
+++ b/ng-admin/src/app/roles/edit-role/edit-role.component.html
@@ -3,9 +3,9 @@
     <h3>
         <span>{{l('EditRole')}} </span>
         <span *ngIf="role&&role.isStatic">
-      <span>(</span>
-        <span style="color:red">默认</span>
-        <span>)</span>
+            <span>(</span>
+            <span style="color:red">默认</span>
+            <span>)</span>
         </span>
     </h3>
 
@@ -16,7 +16,7 @@
             <!-- 角色名称 -->
             <nz-form-item>
                 <nz-form-control nzHasFeedback>
-                    <input nz-input formControlName="name" [placeholder]="l('Name')">
+                    <input nz-input formControlName="name" [placeholder]="'角色名'">
                     <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').errors">
                         <ng-container *ngIf="validateForm.get('name').hasError('required')">{{l('CanNotNull')}}</ng-container>
                     </nz-form-explain>
@@ -49,11 +49,11 @@
             <div class="custom-modal-footer">
                 <div class="custom-modal-footter-group">
                     <button nz-button type="button" [disabled]="saving" (click)="close()">
-            {{l("Cancel")}}
-          </button>
+                        {{l("Cancel")}}
+                    </button>
                     <button nz-button [nzType]="'primary'" type="submit" [disabled]="!validateForm.valid">
-            {{l("Save")}}
-          </button>
+                        {{l("Save")}}
+                    </button>
                 </div>
             </div>
 
